--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -129,11 +129,11 @@ android {
     }
 
     defaultConfig {
-        applicationId "com.one_hand_memo"
+        applicationId "com.takuya.nakamura.react.memo"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
-        versionCode 1
-        versionName "1.0"
+        versionCode 5
+        versionName "1.2.2"
         multiDexEnabled true //add
     }
     splits {
@@ -159,7 +159,8 @@ android {
         release {
             // Caution! In production, you need to generate your own keystore file.
             // see https://reactnative.dev/docs/signed-apk-android.
-            signingConfig signingConfigs.debug
+            // signingConfig signingConfigs.debug
+            signingConfig null //署名なし
             minifyEnabled enableProguardInReleaseBuilds
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
         }
