--- a/ios/memo.xcodeproj/xcshareddata/xcschemes/memo.xcscheme
+++ b/ios/memo.xcodeproj/xcshareddata/xcschemes/memo.xcscheme
@@ -14,10 +14,10 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "2D02E47A1E0B4A5D006451C7"
-               BuildableName = "one_hand_memo-tvOS.app"
-               BlueprintName = "one_hand_memo-tvOS"
-               ReferencedContainer = "container:one_hand_memo.xcodeproj">
+               BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
+               BuildableName = "memo.app"
+               BlueprintName = "memo"
+               ReferencedContainer = "container:memo.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -32,10 +32,10 @@
             skipped = "NO">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "2D02E48F1E0B4A5D006451C7"
-               BuildableName = "one_hand_memo-tvOSTests.xctest"
-               BlueprintName = "one_hand_memo-tvOSTests"
-               ReferencedContainer = "container:one_hand_memo.xcodeproj">
+               BlueprintIdentifier = "00E356ED1AD99517003FC87E"
+               BuildableName = "memoTests.xctest"
+               BlueprintName = "memoTests"
+               ReferencedContainer = "container:memo.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -54,10 +54,10 @@
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "2D02E47A1E0B4A5D006451C7"
-            BuildableName = "one_hand_memo-tvOS.app"
-            BlueprintName = "one_hand_memo-tvOS"
-            ReferencedContainer = "container:one_hand_memo.xcodeproj">
+            BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
+            BuildableName = "memo.app"
+            BlueprintName = "memo"
+            ReferencedContainer = "container:memo.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -71,10 +71,10 @@
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "2D02E47A1E0B4A5D006451C7"
-            BuildableName = "one_hand_memo-tvOS.app"
-            BlueprintName = "one_hand_memo-tvOS"
-            ReferencedContainer = "container:one_hand_memo.xcodeproj">
+            BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
+            BuildableName = "memo.app"
+            BlueprintName = "memo"
+            ReferencedContainer = "container:memo.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
